[package]
name = "tiny-language"
version = "0.1.0"
edition = "2021"
authors = ["shibaoxu <shibaoxu@gmail.com>"]
license = "Apache-2.0"
description = "A tiny Language"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"